setup java backend