@@ -1,44 +1,48 @@
 package com.leighton.jwt.backend.config;
 
-import org.springframework.http.HttpHeaders;
-import java.util.Arrays;
-
-import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
-import org.springframework.web.servlet.config.annotation.EnableWebMvc;
+import java.util.List;
 
 @Configuration
-@EnableWebMvc
 public class WebConfig {
-    @SuppressWarnings("rawtypes")
     @Bean
-    public FilterRegistrationBean corsFilter() {
+    public CorsFilter corsFilter() {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowCredentials(true);
-        config.addAllowedOrigin("http://localhost:5173");
-        config.setAllowedHeaders(Arrays.asList(
+        
+        // Allow frontend to make requests
+        config.setAllowedOrigins(List.of("http://localhost:5173")); // Adjust as needed
+        
+        // Allow necessary headers
+        config.setAllowedHeaders(List.of(
             HttpHeaders.AUTHORIZATION,
             HttpHeaders.CONTENT_TYPE,
             HttpHeaders.ACCEPT
         ));
-        config.setAllowedMethods(Arrays.asList(
+        
+        // Allow specific HTTP methods
+        config.setAllowedMethods(List.of(
             HttpMethod.GET.name(),
             HttpMethod.POST.name(),
             HttpMethod.PUT.name(),
             HttpMethod.DELETE.name()
         ));
-        config.setMaxAge(3600L);
-        source.registerCorsConfiguration("/**", config);
-        @SuppressWarnings("unchecked")
-        FilterRegistrationBean bean = new FilterRegistrationBean(new CorsFilter(source));
-        bean.setOrder(-102);
-        return bean;
 
+        // Allow credentials (e.g., cookies, auth headers)
+        config.setAllowCredentials(true);
+        
+        // Set CORS cache max age (1 hour)
+        config.setMaxAge(3600L);
+
+        // Apply configuration to all endpoints
+        source.registerCorsConfiguration("/**", config);
+        
+        return new CorsFilter(source);
     }
 }
